# JennMesh

./: .flake8  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  README.md  azure-pipelines.yml  jenn-contract.json  pyproject.toml
.azure-pipelines/: deploy-meshbox-01.yml  deploy-opi-orangeprod.yml  mirror-to-github.yml
.azure-pipelines/templates/: deploy-mesh-server.yml
.claude/: launch.json
.github/workflows/: codeql-analysis.yml  security-to-ado.yml
configs/: edge-gateway.yaml  mobile-client.yaml  relay-node.yaml  sensor-node.yaml
deploy/: README.md
deploy/config/: env.template  mosquitto-prod.conf
deploy/scripts/: backup-mesh-db.sh  health-check.sh  install.sh  package-release.sh
deploy/systemd/: jenn-mesh-agent.service  jenn-mesh-broker.service  jenn-mesh-dashboard.service  jenn-radio-watcher.service  jenn-sentry-agent.service
deploy/udev/: 99-meshtastic.rules
infra/: Dockerfile  docker-compose.yml  mesh-broker.yaml  mosquitto-acl.conf
scripts/: check_contract_versions.py
src/jenn_mesh/: __init__.py  cli.py  db.py
tests/: conftest.py  test_db_geofence_coverage.py  test_models_v04.py
tests/test_agent/: test_heartbeat_sender.py  test_recovery_handler.py  test_recovery_relay.py
tests/test_core/: test_alert_summarizer.py  test_anomaly_detector.py  test_asset_tracker.py  test_baselines.py  test_bulk_operation_manager.py  test_bulk_push.py  test_config_manager.py  test_config_queue_manager.py  test_config_rollback.py  test_coverage_mapper.py  test_db.py  test_drift_remediation.py  test_edge_association_manager.py  test_emergency_manager.py  test_encryption_auditor.py  test_env_telemetry.py  test_failover_manager.py  test_fleet_analytics.py  test_fleet_query_engine.py  test_geofencing.py  test_health_scoring.py  test_heartbeat_integration.py  test_heartbeat_receiver.py  test_lost_node_reasoner.py  test_mesh_watchdog.py  test_mqtt_subscriber_recovery.py  test_notification_dispatcher.py  test_partition_detector.py  test_provisioning_advisor.py  test_recovery_manager.py  test_registry.py  test_sync_fragmenter.py  test_sync_relay_manager.py  test_tak_gateway.py  test_team_comms_manager.py  test_topology.py  test_webhook_manager.py  test_workbench_manager.py
tests/test_crews/: test_config.py  test_crews.py  test_tools.py
tests/test_dashboard/: test_alert_summary_api.py  test_anomaly_api.py  (+38 more)
(+165 files in other folders)
