[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jenn-mesh"
version = "0.7.0"
description = "Centralized Meshtastic LoRa radio fleet management for the JENN Intelligent Ecosystem"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Magnivation"}]
license = "LicenseRef-Proprietary"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
agent = [
  "meshtastic>=2.5",
  "httpx>=0.27",
  "paho-mqtt>=2.0",
]
dashboard = [
  "fastapi>=0.109",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.0",
  "paho-mqtt>=2.0",
]
cli = [
  "meshtastic>=2.5",
  "click>=8.0",
  "rich>=13.0",
]
test = [
  "pytest>=7.4",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
ollama = [
  "ollama>=0.4.0",
]
dev = [
  "black>=24.0.0",
  "flake8>=7.0.0",
  "mypy>=1.8.0",
  "pre-commit>=3.7.0",
  "bandit>=1.7.8",
]

[project.scripts]
jenn-mesh = "jenn_mesh.cli:main"
jenn-mesh-agent = "jenn_mesh.agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jenn_mesh = [
  "py.typed",
  "dashboard/templates/*.html",
  "dashboard/static/css/*.css",
  "dashboard/static/js/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: integration tests (hardware, MQTT broker)",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = "src"
files = ["src"]

[tool.bandit]
exclude = ["tests", "build", "dist", ".venv"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"
build_command = "python -m build"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
